Genleşme düzeni yenilendi
CSS esnek yapı düzeniyle oluşturulan genleşme düzeni yeniden yapılandırıldı. CSS değişkenleriyle CSS'de kapladığı yer kaldırıldı. Parça düzenindeki sayı ile uyumlu duruma getirildi. Bundan böyle "SAYI %" işareti ile "SAYIg" deki gibi işlev sağlanabilecektir.

--- a/assets/deveb-s1n0/_kap-orgusu.scss
+++ b/assets/deveb-s1n0/_kap-orgusu.scss
@@ -32,6 +32,20 @@ $p: 24; // parça düzeni ayarı
     width: calc(100% / (var(--b) * 4 - var(--d)) * (var(--a) * 4 - var(--c))); // Parça düzeni sayıştırma ayarları.
     max-width: calc(100% / (var(--b) * 4 - var(--d)) * (var(--a) * 4 - var(--c))); // Parça düzeni sayıştırma ayarları.
   }
+
+  [data-#{$gnl}~="%"],
+  [data-#{$ufk}~="%"],
+  [data-#{$kçk}~="%"],
+  [data-#{$ort}~="%"],
+  [data-#{$byk}~="%"],
+  [data-#{$kcm}~="%"],
+  [data-#{$dev}~="%"]{
+    width:auto;
+    max-width:100%;
+    flex: calc(var(--a) * 4 - var(--c)); // Esnek düzen sayıştırma ayarları
+  }
+
+
 }
 
 // PARÇA DÜZENİ ///////////////////////////////////////////////////////////////////////////////////
@@ -135,11 +149,11 @@ $p: 24; // parça düzeni ayarı
 
 @mixin genleşme-düzeni($görüntülük) {
 
-  @for $i from 1 through $p {
-    [data-#{$görüntülük}~="#{$i}g"]{
-      flex: #{$i};
-    }
-  }
+//  @for $i from 1 through $p {
+//    [data-#{$görüntülük}~="#{$i}g"]{
+//      flex: #{$i};
+//    }
+//  }
 
   [data-#{$görüntülük}~="0"][data-#{$görüntülük}~="0"]{
     flex-basis: auto;
