--- a/assets/deveb-s1n0/deveb-en.css
+++ b/assets/deveb-s1n0/deveb-en.css
@@ -128,8 +128,8 @@ ul h1, ul h2, ul h3, ul h4, ul h5, ul h6 {
 /*  GENEL | Ekran ölçeği: 0 ≤ * < ∞
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 :root {
-  --a: 6;
-  --b: 6;
+  --a: 3;
+  --b: 3;
   --c: 0;
   --d: 0;
 }
@@ -145,6 +145,18 @@ ul h1, ul h2, ul h3, ul h4, ul h5, ul h6 {
   flex-wrap: wrap;
   width: calc(100% / (var(--b) * 4 - var(--d)) * (var(--a) * 4 - var(--c)));
   max-width: calc(100% / (var(--b) * 4 - var(--d)) * (var(--a) * 4 - var(--c)));
+}
+
+[data-gnl~="%"],
+[data-xs~="%"],
+[data-sm~="%"],
+[data-md~="%"],
+[data-lg~="%"],
+[data-xl~="%"],
+[data-hg~="%"] {
+  width: auto;
+  max-width: 100%;
+  flex: calc(var(--a) * 4 - var(--c));
 }
 
 [data-gnl~="fit"] {
@@ -804,102 +816,6 @@ body[data-gnl~="fullscreen"] > footer {
   padding-bottom: 20px;
 }
 
-[data-gnl~="1g"] {
-  flex: 1;
-}
-
-[data-gnl~="2g"] {
-  flex: 2;
-}
-
-[data-gnl~="3g"] {
-  flex: 3;
-}
-
-[data-gnl~="4g"] {
-  flex: 4;
-}
-
-[data-gnl~="5g"] {
-  flex: 5;
-}
-
-[data-gnl~="6g"] {
-  flex: 6;
-}
-
-[data-gnl~="7g"] {
-  flex: 7;
-}
-
-[data-gnl~="8g"] {
-  flex: 8;
-}
-
-[data-gnl~="9g"] {
-  flex: 9;
-}
-
-[data-gnl~="10g"] {
-  flex: 10;
-}
-
-[data-gnl~="11g"] {
-  flex: 11;
-}
-
-[data-gnl~="12g"] {
-  flex: 12;
-}
-
-[data-gnl~="13g"] {
-  flex: 13;
-}
-
-[data-gnl~="14g"] {
-  flex: 14;
-}
-
-[data-gnl~="15g"] {
-  flex: 15;
-}
-
-[data-gnl~="16g"] {
-  flex: 16;
-}
-
-[data-gnl~="17g"] {
-  flex: 17;
-}
-
-[data-gnl~="18g"] {
-  flex: 18;
-}
-
-[data-gnl~="19g"] {
-  flex: 19;
-}
-
-[data-gnl~="20g"] {
-  flex: 20;
-}
-
-[data-gnl~="21g"] {
-  flex: 21;
-}
-
-[data-gnl~="22g"] {
-  flex: 22;
-}
-
-[data-gnl~="23g"] {
-  flex: 23;
-}
-
-[data-gnl~="24g"] {
-  flex: 24;
-}
-
 [data-gnl~="0"][data-gnl~="0"] {
   flex-basis: auto;
   max-width: none;
@@ -1521,102 +1437,6 @@ S01 [data-ufk] UFAK-BÜYÜKLERİYLE | 300px ≤ *
     --d: 1;
   }
 
-  [data-xs~="1g"] {
-    flex: 1;
-  }
-
-  [data-xs~="2g"] {
-    flex: 2;
-  }
-
-  [data-xs~="3g"] {
-    flex: 3;
-  }
-
-  [data-xs~="4g"] {
-    flex: 4;
-  }
-
-  [data-xs~="5g"] {
-    flex: 5;
-  }
-
-  [data-xs~="6g"] {
-    flex: 6;
-  }
-
-  [data-xs~="7g"] {
-    flex: 7;
-  }
-
-  [data-xs~="8g"] {
-    flex: 8;
-  }
-
-  [data-xs~="9g"] {
-    flex: 9;
-  }
-
-  [data-xs~="10g"] {
-    flex: 10;
-  }
-
-  [data-xs~="11g"] {
-    flex: 11;
-  }
-
-  [data-xs~="12g"] {
-    flex: 12;
-  }
-
-  [data-xs~="13g"] {
-    flex: 13;
-  }
-
-  [data-xs~="14g"] {
-    flex: 14;
-  }
-
-  [data-xs~="15g"] {
-    flex: 15;
-  }
-
-  [data-xs~="16g"] {
-    flex: 16;
-  }
-
-  [data-xs~="17g"] {
-    flex: 17;
-  }
-
-  [data-xs~="18g"] {
-    flex: 18;
-  }
-
-  [data-xs~="19g"] {
-    flex: 19;
-  }
-
-  [data-xs~="20g"] {
-    flex: 20;
-  }
-
-  [data-xs~="21g"] {
-    flex: 21;
-  }
-
-  [data-xs~="22g"] {
-    flex: 22;
-  }
-
-  [data-xs~="23g"] {
-    flex: 23;
-  }
-
-  [data-xs~="24g"] {
-    flex: 24;
-  }
-
   [data-xs~="0"][data-xs~="0"] {
     flex-basis: auto;
     max-width: none;
@@ -2228,102 +2048,6 @@ S02 kçk | Ekran ölçeği: 576px ≤ *
 
   [data-sm~="3p"], [data-sm~="7p"], [data-sm~="11p"], [data-sm~="15p"], [data-sm~="19p"], [data-sm~="23p"] {
     --d: 1;
-  }
-
-  [data-sm~="1g"] {
-    flex: 1;
-  }
-
-  [data-sm~="2g"] {
-    flex: 2;
-  }
-
-  [data-sm~="3g"] {
-    flex: 3;
-  }
-
-  [data-sm~="4g"] {
-    flex: 4;
-  }
-
-  [data-sm~="5g"] {
-    flex: 5;
-  }
-
-  [data-sm~="6g"] {
-    flex: 6;
-  }
-
-  [data-sm~="7g"] {
-    flex: 7;
-  }
-
-  [data-sm~="8g"] {
-    flex: 8;
-  }
-
-  [data-sm~="9g"] {
-    flex: 9;
-  }
-
-  [data-sm~="10g"] {
-    flex: 10;
-  }
-
-  [data-sm~="11g"] {
-    flex: 11;
-  }
-
-  [data-sm~="12g"] {
-    flex: 12;
-  }
-
-  [data-sm~="13g"] {
-    flex: 13;
-  }
-
-  [data-sm~="14g"] {
-    flex: 14;
-  }
-
-  [data-sm~="15g"] {
-    flex: 15;
-  }
-
-  [data-sm~="16g"] {
-    flex: 16;
-  }
-
-  [data-sm~="17g"] {
-    flex: 17;
-  }
-
-  [data-sm~="18g"] {
-    flex: 18;
-  }
-
-  [data-sm~="19g"] {
-    flex: 19;
-  }
-
-  [data-sm~="20g"] {
-    flex: 20;
-  }
-
-  [data-sm~="21g"] {
-    flex: 21;
-  }
-
-  [data-sm~="22g"] {
-    flex: 22;
-  }
-
-  [data-sm~="23g"] {
-    flex: 23;
-  }
-
-  [data-sm~="24g"] {
-    flex: 24;
   }
 
   [data-sm~="0"][data-sm~="0"] {
@@ -2939,102 +2663,6 @@ S03 ort | Ekran ölçeği: 768px ≤ *
     --d: 1;
   }
 
-  [data-md~="1g"] {
-    flex: 1;
-  }
-
-  [data-md~="2g"] {
-    flex: 2;
-  }
-
-  [data-md~="3g"] {
-    flex: 3;
-  }
-
-  [data-md~="4g"] {
-    flex: 4;
-  }
-
-  [data-md~="5g"] {
-    flex: 5;
-  }
-
-  [data-md~="6g"] {
-    flex: 6;
-  }
-
-  [data-md~="7g"] {
-    flex: 7;
-  }
-
-  [data-md~="8g"] {
-    flex: 8;
-  }
-
-  [data-md~="9g"] {
-    flex: 9;
-  }
-
-  [data-md~="10g"] {
-    flex: 10;
-  }
-
-  [data-md~="11g"] {
-    flex: 11;
-  }
-
-  [data-md~="12g"] {
-    flex: 12;
-  }
-
-  [data-md~="13g"] {
-    flex: 13;
-  }
-
-  [data-md~="14g"] {
-    flex: 14;
-  }
-
-  [data-md~="15g"] {
-    flex: 15;
-  }
-
-  [data-md~="16g"] {
-    flex: 16;
-  }
-
-  [data-md~="17g"] {
-    flex: 17;
-  }
-
-  [data-md~="18g"] {
-    flex: 18;
-  }
-
-  [data-md~="19g"] {
-    flex: 19;
-  }
-
-  [data-md~="20g"] {
-    flex: 20;
-  }
-
-  [data-md~="21g"] {
-    flex: 21;
-  }
-
-  [data-md~="22g"] {
-    flex: 22;
-  }
-
-  [data-md~="23g"] {
-    flex: 23;
-  }
-
-  [data-md~="24g"] {
-    flex: 24;
-  }
-
   [data-md~="0"][data-md~="0"] {
     flex-basis: auto;
     max-width: none;
@@ -3646,102 +3274,6 @@ S04 byk | Ekran ölçeği: 992px ≤ *
 
   [data-lg~="3p"], [data-lg~="7p"], [data-lg~="11p"], [data-lg~="15p"], [data-lg~="19p"], [data-lg~="23p"] {
     --d: 1;
-  }
-
-  [data-lg~="1g"] {
-    flex: 1;
-  }
-
-  [data-lg~="2g"] {
-    flex: 2;
-  }
-
-  [data-lg~="3g"] {
-    flex: 3;
-  }
-
-  [data-lg~="4g"] {
-    flex: 4;
-  }
-
-  [data-lg~="5g"] {
-    flex: 5;
-  }
-
-  [data-lg~="6g"] {
-    flex: 6;
-  }
-
-  [data-lg~="7g"] {
-    flex: 7;
-  }
-
-  [data-lg~="8g"] {
-    flex: 8;
-  }
-
-  [data-lg~="9g"] {
-    flex: 9;
-  }
-
-  [data-lg~="10g"] {
-    flex: 10;
-  }
-
-  [data-lg~="11g"] {
-    flex: 11;
-  }
-
-  [data-lg~="12g"] {
-    flex: 12;
-  }
-
-  [data-lg~="13g"] {
-    flex: 13;
-  }
-
-  [data-lg~="14g"] {
-    flex: 14;
-  }
-
-  [data-lg~="15g"] {
-    flex: 15;
-  }
-
-  [data-lg~="16g"] {
-    flex: 16;
-  }
-
-  [data-lg~="17g"] {
-    flex: 17;
-  }
-
-  [data-lg~="18g"] {
-    flex: 18;
-  }
-
-  [data-lg~="19g"] {
-    flex: 19;
-  }
-
-  [data-lg~="20g"] {
-    flex: 20;
-  }
-
-  [data-lg~="21g"] {
-    flex: 21;
-  }
-
-  [data-lg~="22g"] {
-    flex: 22;
-  }
-
-  [data-lg~="23g"] {
-    flex: 23;
-  }
-
-  [data-lg~="24g"] {
-    flex: 24;
   }
 
   [data-lg~="0"][data-lg~="0"] {
@@ -4357,102 +3889,6 @@ S05 kcm | Ekran ölçeği: 1200px ≤ *
     --d: 1;
   }
 
-  [data-xl~="1g"] {
-    flex: 1;
-  }
-
-  [data-xl~="2g"] {
-    flex: 2;
-  }
-
-  [data-xl~="3g"] {
-    flex: 3;
-  }
-
-  [data-xl~="4g"] {
-    flex: 4;
-  }
-
-  [data-xl~="5g"] {
-    flex: 5;
-  }
-
-  [data-xl~="6g"] {
-    flex: 6;
-  }
-
-  [data-xl~="7g"] {
-    flex: 7;
-  }
-
-  [data-xl~="8g"] {
-    flex: 8;
-  }
-
-  [data-xl~="9g"] {
-    flex: 9;
-  }
-
-  [data-xl~="10g"] {
-    flex: 10;
-  }
-
-  [data-xl~="11g"] {
-    flex: 11;
-  }
-
-  [data-xl~="12g"] {
-    flex: 12;
-  }
-
-  [data-xl~="13g"] {
-    flex: 13;
-  }
-
-  [data-xl~="14g"] {
-    flex: 14;
-  }
-
-  [data-xl~="15g"] {
-    flex: 15;
-  }
-
-  [data-xl~="16g"] {
-    flex: 16;
-  }
-
-  [data-xl~="17g"] {
-    flex: 17;
-  }
-
-  [data-xl~="18g"] {
-    flex: 18;
-  }
-
-  [data-xl~="19g"] {
-    flex: 19;
-  }
-
-  [data-xl~="20g"] {
-    flex: 20;
-  }
-
-  [data-xl~="21g"] {
-    flex: 21;
-  }
-
-  [data-xl~="22g"] {
-    flex: 22;
-  }
-
-  [data-xl~="23g"] {
-    flex: 23;
-  }
-
-  [data-xl~="24g"] {
-    flex: 24;
-  }
-
   [data-xl~="0"][data-xl~="0"] {
     flex-basis: auto;
     max-width: none;
@@ -5064,102 +4500,6 @@ S06 dev | Ekran ölçeği: 1900px ≤ *
 
   [data-hg~="3p"], [data-hg~="7p"], [data-hg~="11p"], [data-hg~="15p"], [data-hg~="19p"], [data-hg~="23p"] {
     --d: 1;
-  }
-
-  [data-hg~="1g"] {
-    flex: 1;
-  }
-
-  [data-hg~="2g"] {
-    flex: 2;
-  }
-
-  [data-hg~="3g"] {
-    flex: 3;
-  }
-
-  [data-hg~="4g"] {
-    flex: 4;
-  }
-
-  [data-hg~="5g"] {
-    flex: 5;
-  }
-
-  [data-hg~="6g"] {
-    flex: 6;
-  }
-
-  [data-hg~="7g"] {
-    flex: 7;
-  }
-
-  [data-hg~="8g"] {
-    flex: 8;
-  }
-
-  [data-hg~="9g"] {
-    flex: 9;
-  }
-
-  [data-hg~="10g"] {
-    flex: 10;
-  }
-
-  [data-hg~="11g"] {
-    flex: 11;
-  }
-
-  [data-hg~="12g"] {
-    flex: 12;
-  }
-
-  [data-hg~="13g"] {
-    flex: 13;
-  }
-
-  [data-hg~="14g"] {
-    flex: 14;
-  }
-
-  [data-hg~="15g"] {
-    flex: 15;
-  }
-
-  [data-hg~="16g"] {
-    flex: 16;
-  }
-
-  [data-hg~="17g"] {
-    flex: 17;
-  }
-
-  [data-hg~="18g"] {
-    flex: 18;
-  }
-
-  [data-hg~="19g"] {
-    flex: 19;
-  }
-
-  [data-hg~="20g"] {
-    flex: 20;
-  }
-
-  [data-hg~="21g"] {
-    flex: 21;
-  }
-
-  [data-hg~="22g"] {
-    flex: 22;
-  }
-
-  [data-hg~="23g"] {
-    flex: 23;
-  }
-
-  [data-hg~="24g"] {
-    flex: 24;
   }
 
   [data-hg~="0"][data-hg~="0"] {
