--- a/_layouts/s1n0/default.html
+++ b/_layouts/s1n0/default.html
@@ -20,11 +20,11 @@
         <label for="menü-ana">•••</label>
         <label for="menü-ana-çapraz">///</label>
       </div>
-      <div data-dev="2 3p sağda-ol üstte-ol">
+      <div data-gnl data-dev="2 3p _s _t">
         {% include s1n0/dallik.html %}
       </div>
     </div>
-    <div id="içerik" data-kçk="18 22p sığ oluk-çevre">
+    <div id="içerik" data-gnl data-kçk="18 22p sığ oluk-çevre">
       <div data-gnl="lt" data-kçk="20 24p" style="padding-left:30px; padding-right:30px;">
         {% if page.title %}
           <h1 class="sayfa">{{ page.title }}</h1>
