Varsayılan ölçek tetikçisi genişletildi
Parça düzeni varsayılan ölçeği kalıtım alır durumdaydı. Bu durum data-gnl'in tetikleyici olması ayarlaranak ezildi.

--- a/assets/deveb-s1n0/_kap-orgusu.scss
+++ b/assets/deveb-s1n0/_kap-orgusu.scss
@@ -13,7 +13,8 @@ $p: 24; // parça düzeni ayarı
 
 @mixin ayarlar(){
 
-  :root {
+  :root,
+  [data-#{$gnl}]{
     --a: 3; // parça düzeni varsayılan ölçeği
     --b: 3; // parça düzeni varsayılan ölçeği
     --c: 0; // parça düzeni varsayılan ölçeği
