--- a/_layouts/s1n0/default.html
+++ b/_layouts/s1n0/default.html
@@ -1,12 +1,18 @@
+{% if page.url contains '/1.0/tr/' %}
+  {% assign dil = 'tr' %}
+{% endif %}
+{% if page.url contains '/1.0/en/' %}
+  {% assign dil = 'en' %}
+{% endif %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="{{dil}}">
 <head>
 {% include s1n0/head-en.html %}
 </head>
 <body data-byk="tamekran">
   <div data-gnl="oluk-çevre" data-byk="sığ">
-    <div id="sol-alan" data-gnl="t" data-kçk="4 22p sığ oluk-çevre">
-      <div data-gnl="o geniş-aralıklı" data-dev="2 3p _s _o">
+    <div id="sol-alan" data-gnl="t" data-kçk="4 /22 sığ oluk-çevre">
+      <div data-gnl="o geniş-aralıklı" data-dev="8 _s _o">
         <a data-gnl="0" href="/" class="logo2">deveb</a>
         <span class="birincil" data-gnl="0 _o" data-imgelik="kapsül küçük">
           {% if page.url contains '/tr/' %}Sürüm{% endif %}
@@ -20,12 +26,12 @@
         <label for="menü-ana">•••</label>
         <label for="menü-ana-çapraz">///</label>
       </div>
-      <div data-gnl data-dev="2 3p _s _t">
+      <div data-gnl data-dev="8 _s _t">
         {% include s1n0/dallik.html %}
       </div>
     </div>
     <div id="içerik" data-gnl data-kçk="18 22p sığ oluk-çevre">
-      <div data-gnl="lt" data-kçk="20 24p" style="padding-left:30px; padding-right:30px;">
+      <div data-gnl="lt" data-kçk="10" style="padding-left:30px; padding-right:30px;">
         {% if page.title %}
           <h1 class="sayfa">{{ page.title }}</h1>
         {% endif %}
