--- a/_layouts/s1n0/varsayilan.html
+++ b/_layouts/s1n0/varsayilan.html
@@ -11,8 +11,8 @@
 </head>
 <body data-gnl="tamekran">
   <div data-gnl="sığ oluk-çevre">
-    <div id="sol-alan" data-gnl="t" data-kçk="4 22p sığ oluk-çevre">
-      <div data-gnl="o geniş-aralıklı" data-dev="2 3p _s _o">
+    <div id="sol-alan" data-gnl="t" data-kçk="4 /22 sığ oluk-çevre">
+      <div data-gnl="o geniş-aralıklı" data-dev="8 _s _o">
         <a data-gnl="0" href="/" class="logo2">deveb</a>
         <span class="birincil" data-gnl="0 _o" data-imgelik="kapsül küçük">
           {% if page.url contains '/tr/' %}Sürüm{% endif %}
@@ -26,12 +26,12 @@
         <label for="menü-ana">•••</label>
         <label for="menü-ana-çapraz">///</label>
       </div>
-      <div data-gnl data-dev="2 3p _ts">
+      <div data-gnl data-dev="8 _ts">
         {% include s1n0/dallik.html %}
       </div>
     </div>
-    <div id="içerik" data-gnl data-kçk="18 22p sığ oluk-çevre">
-      <div data-gnl="lt" data-kçk="20 24p" style="padding-left:30px; padding-right:30px;">
+    <div id="içerik" data-gnl data-kçk="18 /22 sığ oluk-çevre">
+      <div data-gnl="lt" data-kçk="10" style="padding-left:30px; padding-right:30px;">
         {% if page.title %}
           <h1 class="sayfa">{{ page.title }}</h1>
         {% endif %}
