Genleşme düzeni değişiklikleri
Genleşme düzeninde "%" ayırtgacı "/" ile değiştirildi. Bundan böyle "SAYI /" yazıldığında genleşme kullanımı etkinleştirildi demeye gelir.

--- a/assets/deveb-s1n0/_kap-orgusu.scss
+++ b/assets/deveb-s1n0/_kap-orgusu.scss
@@ -38,15 +38,15 @@ $p: 24; // parça düzeni ayarı
     max-width: calc(100% / (var(--b) * 4 - var(--d)) * (var(--a) * 4 - var(--c))); // Parça düzeni sayıştırma ayarları.
   }
 
-  [data-#{$gnl}~="%"],
-  [data-#{$ufk}~="%"],
-  [data-#{$kçk}~="%"],
-  [data-#{$ort}~="%"],
-  [data-#{$byk}~="%"],
-  [data-#{$kcm}~="%"],
-  [data-#{$dev}~="%"]{
-    width:auto;
-    max-width:100%;
+  [data-#{$gnl}~="/"],
+  [data-#{$ufk}~="/"],
+  [data-#{$kçk}~="/"],
+  [data-#{$ort}~="/"],
+  [data-#{$byk}~="/"],
+  [data-#{$kcm}~="/"],
+  [data-#{$dev}~="/"]{
+    width: auto !important;
+    max-width: 100% !important;
     flex: calc(var(--a) * 4 - var(--c)); // Esnek düzen sayıştırma ayarları
   }
 
