--- a/assets/deveb-s1n0/_kap-orgusu.scss
+++ b/assets/deveb-s1n0/_kap-orgusu.scss
@@ -50,7 +50,6 @@ $p: 24; // parça düzeni ayarı
     flex: calc(var(--a) * 4 - var(--c)); // Esnek düzen sayıştırma ayarları
   }
 
-
 }
 
 // PARÇA DÜZENİ ///////////////////////////////////////////////////////////////////////////////////
@@ -116,8 +115,8 @@ $p: 24; // parça düzeni ayarı
 
   @while $i <= $p {
 
-    [data-#{$görüntülük}~="#{$i}p"],[data-#{$görüntülük}~="#{$i+1}p"],
-    [data-#{$görüntülük}~="#{$i+2}p"],[data-#{$görüntülük}~="#{$i+3}p"]
+    [data-#{$görüntülük}~="/#{$i}"],[data-#{$görüntülük}~="/#{$i+1}"],
+    [data-#{$görüntülük}~="/#{$i+2}"],[data-#{$görüntülük}~="/#{$i+3}"]
     {--b: #{$j+1}; --d: 0}
 
     $i: $i + 4;    $j: $j + 1;
@@ -129,13 +128,13 @@ $p: 24; // parça düzeni ayarı
 
   $i: 1;
   @while $i <= $p {
-      [data-#{$görüntülük}~="#{$i}p"], {
+      [data-#{$görüntülük}~="/#{$i}"], {
           @extend %#{$görüntülük}d-3;
       }
-      [data-#{$görüntülük}~="#{$i+1}p"], {
+      [data-#{$görüntülük}~="/#{$i+1}"], {
           @extend %#{$görüntülük}d-2;
       }
-      [data-#{$görüntülük}~="#{$i+2}p"], {
+      [data-#{$görüntülük}~="/#{$i+2}"], {
           @extend %#{$görüntülük}d-1;
       }
       $i: $i + 4;
@@ -162,8 +161,8 @@ $p: 24; // parça düzeni ayarı
 
   [data-#{$görüntülük}~="0"][data-#{$görüntülük}~="0"]{
     flex-basis: auto;
-    max-width: none;
-    width: auto;
+    max-width: none !important;
+    width: auto !important;
   }
 
 }
@@ -260,8 +259,8 @@ $p: 24; // parça düzeni ayarı
 
   $i: 1;  $j: 0;
   @while $i <= $p {
-    [data-#{$görüntülük}~="#{$i}p-|"],[data-#{$görüntülük}~="#{$i+1}p-|"],
-    [data-#{$görüntülük}~="#{$i+2}p-|"],[data-#{$görüntülük}~="#{$i+3}p-|"]
+    [data-#{$görüntülük}~="/#{$i}-|"],[data-#{$görüntülük}~="/#{$i+1}-|"],
+    [data-#{$görüntülük}~="/#{$i+2}-|"],[data-#{$görüntülük}~="/#{$i+3}-|"]
     {--solara-b: #{$j+1}; --solara-d: 0}
 
     $i: $i + 4;    $j: $j + 1;
@@ -273,13 +272,13 @@ $p: 24; // parça düzeni ayarı
 
   $i: 1;
   @while $i <= $p {
-      [data-#{$görüntülük}~="#{$i}p-|"], {
+      [data-#{$görüntülük}~="/#{$i}-|"], {
           @extend %#{$görüntülük}-solara-d-3;
       }
-      [data-#{$görüntülük}~="#{$i+1}p-|"], {
+      [data-#{$görüntülük}~="/#{$i+1}-|"], {
           @extend %#{$görüntülük}-solara-d-2;
       }
-      [data-#{$görüntülük}~="#{$i+2}p-|"], {
+      [data-#{$görüntülük}~="/#{$i+2}-|"], {
           @extend %#{$görüntülük}-solara-d-1;
       }
       $i: $i + 4;
@@ -287,8 +286,8 @@ $p: 24; // parça düzeni ayarı
 
   $i: 1;  $j: 0;
   @while $i <= $p {
-    [data-#{$görüntülük}~="|-#{$i}p"],[data-#{$görüntülük}~="|-#{$i+1}p"],
-    [data-#{$görüntülük}~="|-#{$i+2}p"],[data-#{$görüntülük}~="|-#{$i+3}p"]
+    [data-#{$görüntülük}~="|-/#{$i}"],[data-#{$görüntülük}~="|-/#{$i+1}"],
+    [data-#{$görüntülük}~="|-/#{$i+2}"],[data-#{$görüntülük}~="|-/#{$i+3}"]
     {--sağara-b: #{$j+1}; --sağara-d: 0}
 
     $i: $i + 4;    $j: $j + 1;
@@ -300,13 +299,13 @@ $p: 24; // parça düzeni ayarı
 
   $i: 1;
   @while $i <= $p {
-      [data-#{$görüntülük}~="|-#{$i}p"], {
+      [data-#{$görüntülük}~="|-/#{$i}"], {
           @extend %#{$görüntülük}-sağara-d-3;
       }
-      [data-#{$görüntülük}~="|-#{$i+1}p"], {
+      [data-#{$görüntülük}~="|-/#{$i+1}"], {
           @extend %#{$görüntülük}-sağara-d-2;
       }
-      [data-#{$görüntülük}~="|-#{$i+2}p"], {
+      [data-#{$görüntülük}~="|-/#{$i+2}"], {
           @extend %#{$görüntülük}-sağara-d-1;
       }
       $i: $i + 4;
@@ -1194,3 +1193,5 @@ kcm | Ekran ölçeği: 1200px ≤ * < 1900px
 
 
 }
+
+@include sondaki-ayarlar(); // CSS'in sonunda tanımlanan ayarlar.
